another attmept to fix broken inhertitance links

--- a/docsrc/_static/mycss.css
+++ b/docsrc/_static/mycss.css
@@ -6,6 +6,10 @@ img.inheritance {
   max-width: none;
 }
 
+div.graphviz {
+  overflow: auto;
+}
+
 body {
   font-size: 60%
 }
